--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,5 @@
 <!doctype html>
-<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
-<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!-- Consider adding a manifest.appcache: h5bp.com/d/Offline -->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<html class="no-js" lang="en">
 <head>
   <meta charset="utf-8">
 
@@ -27,12 +22,6 @@
   <link rel="stylesheet" href="stylesheets/patients.css">
 
   <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
-
-  <!-- All JavaScript at the bottom, except this Modernizr build incl. Respond.js
-       Respond is a polyfill for min/max-width media queries. Modernizr enables HTML5 elements & feature detects;
-       for optimal performance, create your own custom Modernizr build: www.modernizr.com/download/ -->
-  <script src="javascripts/lib/modernizr.min.js"></script>
-  <script src="javascripts/lib/respond.min.js"></script>
 </head>
 
 <body>
@@ -46,9 +35,8 @@
   </footer>
 
   <!-- JavaScript at the bottom for fast page loading -->
-  <script src="javascripts/lib/jquery-1.7.1.js"></script>
+  <script src="javascripts/lib/jquery-3.4.1.js"></script>
   <script src="javascripts/lib/underscore.js"></script>
-  <script src="javascripts/lib/json2.js"></script>
   <script src="javascripts/lib/backbone.js"></script>
 
   <!-- scripts concatenated and minified via build script -->
@@ -66,21 +54,14 @@
   <script src="javascripts/boot/run.js"></script>
   <!-- end scripts -->
 
-  <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
-       chromium.org/developers/how-tos/chrome-frame-getting-started -->
-  <!--[if lt IE 7 ]>
-    <script defer src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
-    <script defer>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
-  <![endif]-->
-
   <script type="text/template" id="template-patients">
     <h2>List of patients</h2>
     <ol id="patients-container"></ol>
   </script>
 
   <script type="text/template" id="template-patient">
-    <div class='patient-name clear-both'> <%= name %> </div>
-      <div class='patient-more-info clear-both'>
+    <div class='patient-name'> <%= name %> </div>
+      <div class='patient-more-info'>
         <div class='doctor-name'> <%= doctor_name %> </div>
         <div class='patient-id'> <%= id %> </div>
       </div>
